fixed some layout issues more work to go

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -18,6 +18,10 @@
 }
 
 
+body { 
+        overflow-x: hidden;
+ }
+
 
 .navbar {
     width: 100vw;
